ChangeLog for the Astro project.

20200820:
	* allow for older libusb in USBContextHolder.cpp

20200819:
	* protect Callback from races
	* make SimCooler start only when it is actually requested
	* fix missing includes in astrotime and astrofocus

20200818:
	* add monitoring thread to AtikCooler, stop to AtikCcd
	* fix threads in QHY driver
	* fix threads in simulator driver
	* fix threads in Asi driver
	* fix thread interface in Sx, ensure threads are terminated
	* moved some thread start functions to class scope
	* reworked QSI driver
	* fixed shutdown sequence in QSI driver (proper thread termination 
	  in dependent classes)
	* fix snowccd client help message
	* fix snowfilterwheel client syntax

20200817:
	* fix warning in debug.cpp
	* fix warning in GridCalculator.cpp
	* fix warning in URL.cpp
	* fix warning in FITS.cpp
	* fix warning in ImageBuffer.cpp
	* fix warning in ImageDirectory.cpp
	* fix initialization warnings in VectorField.cpp
	* fix using readdir_r in Properties.cpp
	* fix warnings in ParameterDescription.cpp
	* fix warnings in ModuleRepository.cpp
	* fix warnings in ImageRepo.cpp
	* fix warnings in Catalog.cpp
 	* fix warnings in BSC.cpp
	* fix warnings in DeepSkyObject.cpp
	* fix warnings in PGCDatabase.cpp
	* fix warnings in PGC.cpp
	* fix warnings in PeakFinder.cpp
	* fix warnings in ThresholdExtractor.cpp
	* fix warnings in FocusProcess.cpp
	* fix warnings in TaskInfo.cpp
	* fix warnings in AstroTask.h (class TaskMonitorInfo)
	* fix warnings in DaemonI.cpp
	* fix warnings in MountI.cpp
	* fix warnings in snowdaemon.cpp
	* fix warnings in snowccd.cpp
	* fix warnings in SxUtils.cpp, SxAO.cpp, SxCcdM26.cpp
	* fix warnings in NiceMount.cpp
	* fix warnings in QsiCcd.cpp, QsiFilterWheel.cpp
	* fix warnings in AsiLocator.{h,cpp}, AsiCamera.cpp
	* fix warnings in astroconfig.cpp
	* fix warnings in guider.cpp
	* fix warnings in astrosunmoon.cpp, astroephemeris.cpp
	* add timestamp to monitor functions of snowclient programs